--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    namespace = 'io.uplexaproject.androidminer'
+    namespace = 'com.uplexa.androidminer'
     compileSdkVersion = 34
     buildToolsVersion = '34.0.0'
 
